--- a/index.html
+++ b/index.html
@@ -617,6 +617,7 @@
     //我的 点击取消修改
     $("#mine_change_dismiss").click(function() {
       reloadFunction();
+      $("#mine_loading").hide();
     })
 
     //我的 点击完成修改
